--- a/Code Practise/localStorage.html
+++ b/Code Practise/localStorage.html
@@ -6,18 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<button>Add note</button>
+<div class="note"></div>
 
 <body>
     <script>
-        if (localStorage.getItem("Name")) {
-            a = localStorage.getItem("Name")
-            document.write("Welcome " + a)
+        function saveNoteToStorage(note) {
+            localStorage.setItem("note", note)
         }
-        else {
-            let a = prompt("What's your name?")
-            localStorage.setItem("Name", a)
-            document.write("Welcome " + a)
+        let note = localStorage.getItem("note")
+        if (note) {
+            document.querySelector(".note").innerHTML = note;
         }
+        document.querySelector("button").addEventListener("click", () => {
+            let note = prompt("What's your note?")
+            saveNoteToStorage(note)
+            document.querySelector(".note").innerHTML = note;
+        })
+
     </script>
 </body>
 
