Added Some html and css

--- a/project - Spotify Clone/index.html
+++ b/project - Spotify Clone/index.html
@@ -26,12 +26,61 @@
                         Your Library
                     </h2>
                 </div>
-            </div>
-            <div class="footer">
+                <div class="footer">
+                    <div class="link-container"><a href="https://www.spotify.com/pk-en/legal/"><span>Legal</span></a>
+                    </div>
+                    <div class="link-container"><a href="https://www.spotify.com/pk-en/safetyandprivacy/"><span>Safety
+                                &amp;
+                                Privacy Center</span></a></div>
+                    <div class="link-container"><a
+                            href="https://www.spotify.com/pk-en/legal/privacy-policy/"><span>Privacy
+                                Policy</span></a></div>
+                    <div class="link-container"><a
+                            href="https://www.spotify.com/pk-en/legal/cookies-policy/"><span>Cookies</span></a></div>
+                    <div class="link-container"><a
+                            href="https://www.spotify.com/pk-en/legal/privacy-policy/#s3"><span>About
+                                Ads</span></a></div>
+                    <div class="link-container"><a
+                            href="https://www.spotify.com/pk-en/accessibility/"><span>Accessibility</span></a></div>
 
+                </div>
+            </div>
+
+        </div>
+        <div class="right bg-grey rounded">
+            <div class="header">
+                <div class="nav">
+                    <svg width="24" height="24" class="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                        <path
+                            d="M41.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 256 246.6 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-160 160z" />
+                    </svg>
+                    <svg width="24" height="24" class="white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512">
+                        <path
+                            d="M278.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-160 160c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L210.7 256 73.4 118.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l160 160z" />
+                    </svg>
+                </div>
+                <div class="buttons">
+                    <button>Sign up</button>
+                    <button>Login in</button>
+                </div>
+            </div>
+            <div class="spotifyPlaylists">
+                <h1>Spotify PlayList</h1>
+                <div class="cardContainer">
+                    <div class="card">
+                        <img src="https://i.scdn.co/image/ab67706f00000002c61f28bb8f3662ae8f720848" alt="">
+                        <h2>Party Hits</h2>
+                        <p>A mix of the biggest pop, dance, and hip hop party songs.</p>
+                    </div>
+
+                    <div class="card">
+                        <img src="https://i.scdn.co/image/ab67706f00000002c61f28bb8f3662ae8f720848" alt="">
+                        <h2>Party Hits</h2>
+                        <p>A mix of the biggest pop, dance, and hip hop party songs.</p>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="right bg-grey border"> </div>
     </div>
 </body>
 
