Added music library for playing music

--- a/project - Spotify Clone/index.html
+++ b/project - Spotify Clone/index.html
@@ -29,7 +29,17 @@
 
                 <div class="songsList">
                     <ul>
-                        <li>Songs name</li>
+                        <li>
+                            <img class="invert" src="music.svg" alt="">
+                            <div class="info">
+                                <div>Song Name</div>
+                                <div>Artist Name</div>
+                            </div>
+                            <div class="playNow">
+                                <span>Play Now</span>
+                                <img src="playButton.svg" alt="">
+                            </div>
+                        </li>
                     </ul>
                 </div>
                 <div class="footer">
