Added some more css like playbar or music list

--- a/project - Spotify Clone/index.html
+++ b/project - Spotify Clone/index.html
@@ -7,6 +7,7 @@
     <title>Spotify – Web Player</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -29,17 +30,7 @@
 
                 <div class="songsList">
                     <ul>
-                        <li>
-                            <img class="invert" src="music.svg" alt="">
-                            <div class="info">
-                                <div>Song Name</div>
-                                <div>Artist Name</div>
-                            </div>
-                            <div class="playNow">
-                                <span>Play Now</span>
-                                <img src="playButton.svg" alt="">
-                            </div>
-                        </li>
+
                     </ul>
                 </div>
                 <div class="footer">
@@ -94,10 +85,12 @@
                             </div>
 
                         </div>
-                        <img src="https://i.scdn.co/image/ab67706f00000002c61f28bb8f3662ae8f720848" alt="">
-                        <h2>Party Hits</h2>
-                        <p>A mix of the biggest pop, dance, and hip hop party songs.</p>
+                        <img src="https://i.scdn.co/image/ab67706f0000000295ae4942f9478ff121f26364" alt="">
+                        <h2>Pop Rising</h2>
+                        <p>Who's now and next in pop. Cover: Mark Ambor.</p>
                     </div>
+
+
 
                     <div class="card">
                         <div class="play">
@@ -108,23 +101,27 @@
                                         fill="black"></path>
                                 </svg>
                             </div>
-
                         </div>
-                        <img src="https://i.scdn.co/image/ab67706f00000002c61f28bb8f3662ae8f720848" alt="">
-                        <h2>Party Hits</h2>
-                        <p>A mix of the biggest pop, dance, and hip hop party songs.</p>
+                        <img src="https://i.scdn.co/image/ab67706f0000000295ae4942f9478ff121f26364" alt="">
+                        <h2>Pop Rising</h2>
+                        <p>Who's now and next in pop. Cover: Mark Ambor.</p>
                     </div>
 
 
                 </div>
                 <div class="playBar">
+                    <div class="seekBar">
+                        <div class="circle">
+
+                        </div>
+                    </div>
                     <div class="songInfo">
 
                     </div>
                     <div class="songButtons">
 
                         <img src="previous.svg" alt="">
-                        <img src="playButton.svg" alt="">
+                        <img src="musicButton.svg" alt="">
                         <img src="next.svg" alt="">
                     </div>
                     <div class="songTime">
