--- a/project - Spotify Clone/index.html
+++ b/project - Spotify Clone/index.html
@@ -115,17 +115,21 @@
 
                         </div>
                     </div>
-                    <div class="songInfo">
+                    <div class="aboveBar">
 
-                    </div>
-                    <div class="songButtons">
 
-                        <img src="previous.svg" alt="">
-                        <img src="musicButton.svg" alt="">
-                        <img src="next.svg" alt="">
-                    </div>
-                    <div class="songTime">
+                        <div class="songInfo">
 
+                        </div>
+                        <div class="songButtons">
+
+                            <img id="previous" src="previous.svg" alt="">
+                            <img id="play" src="musicButton.svg" alt="">
+                            <img id="next" src="next.svg" alt="">
+                        </div>
+                        <div class="songTime">
+
+                        </div>
                     </div>
                 </div>
             </div>
