--- a/Events and strings/index.html
+++ b/Events and strings/index.html
@@ -58,13 +58,13 @@
             e.stopPropagation();
         }, false)
 
-        document.querySelector("#images").addEventListener("click", function (e) {
-            if (e.target.tagName === "IMG") {
-                console.log(e.target.id)
-                let removeIt = e.target.parentNode;
-                removeIt.remove();
-            }
-        })
+        // document.querySelector("#images").addEventListener("click", function (e) {
+        //     if (e.target.tagName === "IMG") {
+        //         console.log(e.target.id)
+        //         let removeIt = e.target.parentNode;
+        //         removeIt.remove();
+        //     }
+        // })
         // removeIt.parentNode.removeChild(removeIt);
     </script>
 </body>
