Just Revision of javaScript concepts as i am going to start its framework Angular.

--- a/JavaScript Revision/index.html
+++ b/JavaScript Revision/index.html
@@ -10,7 +10,7 @@
     <p>In this case JavaScript changes the value of the src (source) attribute of an image.</p>
 
     <button
-        onclick="document.getElementById('myImage').src='https:w7.pngwing.com/pngs/176/1002/png-transparent-blue-light-bulb-illustration-incandescent-light-bulb-lamp-lighting-blue-light-bulb-light-fixture-blue-lights-thumbnail.png'">Turn
+        onclick="document.getElementById('myImage').src='https:encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQTvWYwfoPnN-pLOu3D8ZAcVLkeWQILE6EbLg&s'">Turn
         on the light</button>
 
     <img id="myImage" src="pic_bulboff.gif" style="width:200px" height="300px">
