--- a/JavaScript Revision/index.html
+++ b/JavaScript Revision/index.html
@@ -21,6 +21,7 @@
     <p id="demo_1">My Paragraph 1</p>
     <p id="demo_2">My Paragraph 2</p>
     <p id="demo_3">My Paragraph 3</p>
+    <p id="demo_4">My Paragraph 4</p>
     <button onclick="myFunction()">Click it!</button>
 
 
@@ -30,6 +31,7 @@
             document.getElementById("demo_1").innerHTML = "Yayy!! You clicked first paragraph!";
             document.getElementById("demo_2").innerHTML = "Yayy!! You clicked second paragraph!";
             document.getElementById("demo_3").innerHTML = "Yayy!! You clicked third paragraph!";
+            document.getElementById("demo_4").innerHTML = "Yayy!! You clicked third paragraph!";
         }
 
     </script>
